--- a/templates/admin/challenges/challenges.html.twig
+++ b/templates/admin/challenges/challenges.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    {% include 'layout/navbar.html.twig' %}
+    {% include 'admin/layout/navbar.html.twig' %}
 
     <div class="container mt-4">
         <h3 style="color: #531B51;"><b>GÉRER LES CHALLENGES</b></h3>
