--- a/templates/admin/challenges/edit.html.twig
+++ b/templates/admin/challenges/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    {% include 'layout/navbar.html.twig' %}
+    {% include 'admin/layout/navbar.html.twig' %}
 
     <style>
         html, body
