--- a/templates/admin/challenges/index.html.twig
+++ b/templates/admin/challenges/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    {% include 'layout/navbar.html.twig' %}
+    {% include 'admin/layout/navbar.html.twig' %}
 
     <div style="padding-top: 20px; padding-left: 20px; padding-right: 20px;">
         <h3 style="color: #531B51;"><b>STATISTIQUE DE SALES CHALLENGE</b></h3>
@@ -56,7 +56,7 @@
             </div>
         </div>
 
-        {% include 'admin/ajax/_filtervente.html.twig' %}
+        {% include 'admin/ajax/_filter.html.twig' %}
 
         <div class="mytables" id="ma_table_Sites">
             <div class="row">
