--- a/templates/admin/layout/navbar.html.twig
+++ b/templates/admin/layout/navbar.html.twig
@@ -1,41 +1,32 @@
 {% block body %}
 
-    {% block stylesheets %}
-
-        <style>
-            html, body
-            {
-                font-family: 'Montserrat', serif;
-                background: white;
-                height: 100%;
-            }
-
-            li
-            {
-                list-style-type: none;
-            }
-
-            a
-            {
-                text-decoration: none;
-            }
-        </style>
-
-    {% endblock %}
+    <style>
+        html, body
+        {
+            font-family: 'Montserrat', serif;
+            background: white;
+        }
+    </style>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand sidebar">
+        <a class="navbar-brand" href="{{ path('dashboard') }}">
             <img src="{{ asset('/assets/images/favicon.ico') }}" width="30" height="30" class="d-inline-block align-top" alt="">
             Via Automobile
         </a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ path('admin') }}">Accueil<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('admin-challenges') }}">Challenges</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('admin-miscellaneous') }}">Divers</a>
+                </li>
+            </ul>
             <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link">{{ semaine }}</a>
-                    </li>
-                </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link"><i class="fa fa-user"></i>&nbsp;{{ app.user.prenom }} {{ app.user.nom }}&nbsp;&nbsp;&nbsp;&nbsp;| <span class="sr-only">(current)</span></a>
@@ -47,5 +38,6 @@
             </div>
         </div>
     </nav>
+
 
 {% endblock %}
