--- a/templates/challenge/challenge.html.twig
+++ b/templates/challenge/challenge.html.twig
@@ -4,24 +4,10 @@
 
     {% include 'layout/menu.html.twig' %}
 
-    <style>
-        #screen_challenge
-        {
-            position: absolute;
-            bottom:0;
-            left:0;
-            top: 0;
-            right:0;
-            margin: auto;
-            margin-left: 100px;
-            padding-top: 20px;
-            zoom: 125%;
+    {% include 'layout/navbar.html.twig' %}
 
-        }
-    </style>
-
-    <div id="screen_challenge" class="container mt-2" style="padding-left: 200px;">
-        <h3 style="color: #531B51;"><b>LES CHALLENGES EN COURS</b></h3>
+    <div class="container screen_challenge mt-5">
+        <h3 class="text-viaautomobile mb-4"><b>LES CHALLENGES EN COURS</b></h3>
         {% if challenge_en_cours is null %}
             <div class="alert alert-info mt-3" role="alert">
                 <i class="fa fa-info"></i>&nbsp;&nbsp;Aucun challenge en cours pour le moment
@@ -29,45 +15,42 @@
         {% else %}
             <div class="row mt-3">
                 <div class="col">
-                    <img style="border-radius: 10px;" src="{{ vich_uploader_asset(challenge_en_cours, 'imageFile') }}" width="225" height="150">
+                    <img class="image_challenge" src="{{ vich_uploader_asset(challenge_en_cours, 'imageFile') }}" width="225" height="150">
                 </div>
                 <div class="col">
-                    <h5 style="color: #531B51;"><b>{{ challenge_en_cours.titre }}</b></h5>
-                    <span style="color: #808080; font-size: 12px;">Période : {{ challenge_en_cours.periode }}</span></br>
-                    <span style="color: black; font-size: 15px;">{{ challenge_en_cours.description }}</span></br>
-                    <span style="color: black; font-size: 15px;">Classement en cours :</span>
-                    <div class="row">
+                    <h5 class="text-viaautomobile"><b>{{ challenge_en_cours.titre }}</b></h5>
+                    <span class="periode mt-3">Période : {{ challenge_en_cours.periode }}</span>
+                    <span class="description_challenge mt-3">{{ challenge_en_cours.description }}</span>
+                    <span class="description_challenge">Classement en cours :</span>
+                    <div class="row podium">
                         <div class="col">
-                            <span style="color: black; font-size: 12px;">🥇 {{ first_mandat.prenom }} {{ first_mandat.nom}} ({{ first_mandat.nombre}} mandats)</span></br>
-                            <span style="color: black; font-size: 12px;">🥈 {{ second_mandat.prenom }} {{ second_mandat.nom}} ({{ second_mandat.nombre}} mandats)</span></br>
-                            <span style="color: black; font-size: 12px;">🥉 {{ third_mandat.prenom }} {{ third_mandat.nom }} ({{ third_mandat.nombre }} mandats)</span>
+                            <span>🥇 {{ first_mandat.prenom }} {{ first_mandat.nom}} ({{ first_mandat.nombre}} mandats)</span>
+                            <span>🥈 {{ second_mandat.prenom }} {{ second_mandat.nom}} ({{ second_mandat.nombre}} mandats)</span>
+                            <span>🥉 {{ third_mandat.prenom }} {{ third_mandat.nom }} ({{ third_mandat.nombre }} mandats)</span>
                         </div>
                         <div class="col">
-                            <span style="color: black; font-size: 12px;">🥇 {{ first_vente.prenom }} {{ first_vente.nom }} ({{ first_vente.vente }} ventes)</span></br>
-                            <span style="color: black; font-size: 12px;">🥈 {{ second_vente.prenom }} {{ second_vente.nom }} ({{ second_vente.vente }} ventes)</span></br>
-                            <span style="color: black; font-size: 12px;">🥉 {{ third_vente.prenom }} {{ third_vente.nom }} ({{ third_vente.vente }} ventes)</span>
+                            <span>🥇 {{ first_vente.prenom }} {{ first_vente.nom }} ({{ first_vente.vente }} ventes)</span>
+                            <span>🥈 {{ second_vente.prenom }} {{ second_vente.nom }} ({{ second_vente.vente }} ventes)</span>
+                            <span>🥉 {{ third_vente.prenom }} {{ third_vente.nom }} ({{ third_vente.vente }} ventes)</span>
                         </div>
                     </div>
                 </div>
             </div>
         {% endif %}
-        </br></br>
-        <h3 style="color: #531B51;"><b>LES CHALLENGES PASSÉS</b></h3>
+        <h3 class="text-viaautomobile mt-5 mb-4"><b>LES CHALLENGES PASSÉS</b></h3>
         {% for challenge in challenges_passes %}
             <div class="row mt-3">
                 <div class="col">
-                    <img style="border-radius: 10px;" src="{{ vich_uploader_asset(challenge, 'imageFile')}}" width="225" height="150">
+                    <img class="image_challenge" src="{{ vich_uploader_asset(challenge, 'imageFile')}}" width="225" height="150">
                 </div>
-                <div class="col mt-3">
-                    <h5 style="color: #531B51;"><b>{{ challenge.titre }}</b></h5>
-                    <span style="color: #808080; font-size: 12px;">Période : {{ challenge.periode }}</span></br>
-                    <span style="color: black; font-size: 15px;">{{ challenge.description }}</br></span>
-                    <span style="color: black; font-size: 15px;"><b>Vainqueur :</b> {{ challenge.vainqueur }}</span>
+                <div class="col mt-3 mb-4">
+                    <h5 class="text-viaautomobile"><b>{{ challenge.titre }}</b></h5>
+                    <span class="periode mt-3">Période : {{ challenge.periode }}</span>
+                    <span class="description_challenge mt-3">{{ challenge.description }}</span>
+                    <span class="description_challenge"><b>Vainqueur :</b> {{ challenge.vainqueur }}</span>
                 </div>
-            </div></br>
+            </div>
         {% endfor %}
-        </br>
-
     </div>
 
 {% endblock %}
