--- a/templates/dashboard/dashboard.html.twig
+++ b/templates/dashboard/dashboard.html.twig
@@ -11,7 +11,7 @@
             <p class="nombre_mandat text-viaautomobile fs-7">{{ mandat ? mandat.nombre : 0 }}</p>
             <p class="text-viaautomobile fs-2 mb-5">Mandats</p>
             <button class="btn btn-light dashboard-button" role="button" data-toggle="modal" data-target="#mandat">Ajouter Mandats</button>
-            <hr/>
+            <hr class="dashboard-hr"/>
         </div>
         <div class="col dashboard-col">
             <h3 class="text-viaautomobile"><b>NOMBRE DE VENTES</b></h3>
