--- a/templates/historic/historique.html.twig
+++ b/templates/historic/historique.html.twig
@@ -3,108 +3,54 @@
 {% block body %}
 
     {% include 'layout/menu.html.twig' %}
+    {% include 'layout/navbar.html.twig' %}
 
-    <style>
-        #select
-        {
-            position: absolute;
-            bottom:0;
-            left:0;
-            top: 0;
-            right:0;
-            z-index: 0;
-            margin: auto;
-            margin-left: 350px;
-            margin-top: 150px;
-        }
-
-        h3, h5
-        {
-            position: absolute;
-            bottom:0;
-            left:0;
-            top: 0;
-            right:0;
-            margin: auto;
-            margin-left: 300px;
-            padding-top: 50px;
-        }
-
-        .form-control
-        {
-            font-size: 15px;
-        }
-
-        table
-        {
-            position: absolute;
-            width: 100%;
-            height: 25%;
-            left: 35%;
-            margin: auto;
-            zoom: 125%;
-            padding-top: 200px;
-            margin-right: 50px;
-            display: none;
-        }
-
-        #ma_table_Ventes
-        {
-            position: absolute;
-            height: 25%;
-            left: 25%;
-            margin: auto;
-            zoom: 125%;
-            padding-top: 200px;
-            margin-right: 100px;
-            width: 70%;
-        }
-
-        #ma_table_Mandats
-        {
-            width: 30%;
-        }
-
-    </style>
-
-    <div class="container">
-        <h3 style="color: #531B51;"><b>AFFICHER L'HISTORIQUE</b></h3>
-        <h5 style="color: #531B51; padding-top: 100px;">Choissisez vos filtres :</h5>
-        <div id="select">
-            <form action="" method="POST">
-                <div class="form-group">
-                    <select style="width: 50%; background-color: #531B51; color: white;" class="form-control" name="monselect">
-                        <option selected="selected"><span>Type d'action</span></option>
-                        <option>Ventes</option>
-                        <option>Mandats</option>
-                    </select>
-                </div>
-            </form>
-            <form action="" method="POST">
-                <div class="form-group">
-                    <select name="mois" style="width: 50%; background-color: #531B51; color: white;" class="form-control">
-                        <option id="periode" selected="selected"><span>Période</span></option>
-                        <option id="01">Janvier</option>
-                        <option id="02">Février</option>
-                        <option id="03">Mars</option>
-                        <option id="04">Avril</option>
-                        <option id="05">Mai</option>
-                        <option id="06">Juin</option>
-                        <option id="07">Juillet</option>
-                        <option id="08">Août</option>
-                        <option id="09">Septembre</option>
-                        <option id="10">Octobre</option>
-                        <option id="11">Novembre</option>
-                        <option id="12">Décembre</option>
-                    </select>
-                </div>
-            </form>
+    <h3 class="text-viaautomobile mt-4 ml-5"><b>AFFICHER L'HISTORIQUE</b></h3>
+    <h5 class="text-viaautomobile mt-4 ml-5">Choissisez vos filtres :</h5>
+    <div id="select mb-5">
+        <div class="row mt-5 ml-3">
+            <div class="col-sm-2">
+                <form action="" method="POST">
+                    <div class="form-group">
+                        <select class="historique-select" name="monselect">
+                            <option selected="selected"><span>Type d'action</span></option>
+                            <option>Ventes</option>
+                            <option>Mandats</option>
+                        </select>
+                    </div>
+                </form>
+            </div>
+            <div class="col-sm-2">
+                <form action="" method="POST">
+                    <div class="form-group">
+                        <select name="mois" class="historique-select">
+                            <option id="periode" selected="selected"><span>Période</span></option>
+                            <option id="01">Janvier</option>
+                            <option id="02">Février</option>
+                            <option id="03">Mars</option>
+                            <option id="04">Avril</option>
+                            <option id="05">Mai</option>
+                            <option id="06">Juin</option>
+                            <option id="07">Juillet</option>
+                            <option id="08">Août</option>
+                            <option id="09">Septembre</option>
+                            <option id="10">Octobre</option>
+                            <option id="11">Novembre</option>
+                            <option id="12">Décembre</option>
+                        </select>
+                    </div>
+                </form>
+            </div>
         </div>
+    </div>
 
+    <div class="tables">
         {% include 'historic/ajax/_filtervente.html.twig' %}
         {% include 'historic/ajax/_filtermandat.html.twig' %}
-
     </div>
+
+
+
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>
     <script type="text/javascript">
@@ -176,18 +122,8 @@
                         }
                     });
                 }
-
             });
-
-
-
-
-
-
-
-
         });
-
     </script>
 
 {% endblock %}
