--- a/templates/pages/edit_account.html.twig
+++ b/templates/pages/edit_account.html.twig
@@ -3,59 +3,14 @@
 {% block body %}
 
     {% include 'layout/menu.html.twig' %}
+    {% include 'layout/navbar.html.twig' %}
 
-    <style>
-        .form-control
-        {
-            font-size: 15px;
-        }
-
-        label
-        {
-            color: #808080;
-        }
-
-        h3
-        {
-            padding-top: 70px;
-        }
-        form
-        {
-            padding-top: 70px;
-            margin-left: 20px;
-            margin-bottom: 50px;
-            width: 50%;
-        }
-
-        .card
-        {
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            border-radius: 15px;
-            width: 1000px;
-        }
-
-        .card-body
-        {
-            width: 1000px;
-        }
-
-        .form-error-message
-        {
-            color: red;
-        }
-
-    </style>
-
-    <div class="container">
-        <h3 style="color: #531B51;"><b>PARAMÈTRES DU COMPTE</b></h3>
+    <div class="container mt-5">
+        <h3 class="text-viaautomobile mb-5"><b>PARAMÈTRES DU COMPTE</b></h3>
         {{ form_start(form) }}
-            <div class="card">
-                <h4 style="padding-top: 20px; padding-left: 20px;">Informations générales</h4>
-                <hr>
-                <div class="card-body mt-4">
+            <div class="card edit-card">
+                <h4>Informations générales</h4><hr/>
+                <div class="card-body edit-card-body mt-4">
                     <div class="form-row">
                         <div class="form-group col-md-4">
                             <label for="inputEmail4">Nom</label>
@@ -96,17 +51,10 @@
                             {{ form_row(form.confirm_password, {'attr': {'placeholder': 'Confirmez votre mot de passe'}}) }}
                         </div>
                     </div>
-                    <button id="cache" style="background-color: #754974;" type="submit" class="btn btn-light mb-2"><span style="color: white;">Modifier</span></button>
+                    <button type="submit" class="btn btn-light dashboard-button mb-2">Modifier</button>
                 </div>
             </div>
-
         {{ form_end(form) }}
     </div>
-
-
-
-
-
-
 
 {% endblock %}
